Alpha Fix
Alpha is now included in solution.

Changes has been made to the base shader to decrease colour strength base on opacity.

Depth testing has also been tested and works on the two square example. Only shapes with smaller z (depth) are drawn to avoid overlap.

--- a/CSS/WebStyle.css
+++ b/CSS/WebStyle.css
@@ -18,4 +18,5 @@ body {
 .GameCanvas{
     width: 50vw;
     height: 50vh;
+    background-color: rgba(255, 255, 255, 0);
 }
